# Fly-Log

./: CMakeLists.txt  README.md
Test/: MultiProTest.cpp  MultiThreadTest.cpp  logTest.cpp
logUtils/: logging.cpp  logging.h
